# DRF_TODO

./: .gitignore  pyproject.toml  secrets.json
articles/: models.py  serializer.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_article_completion_at.py  0003_alter_article_completion_at.py  0004_remove_article_content.py  0005_alter_article_completion_at_alter_article_user.py
todolist/: settings.py  urls.py
users/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_age.py  0002_user_gender.py  0003_alter_user_age.py  0003_alter_user_date_of_birth_alter_user_gender.py  0004_alter_user_date_of_birth.py  0005_user_username.py  0006_user_introduction.py
